# uhh

./: .clang-format  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  TODO.md  config.go  config_test.go  constants.go  git.go  go.mod  go.sum  main.go  snippets.go  uhh.go
.github/workflows/: ccpp.yml  go.yml
cmake/: Findlibgit2.cmake
cmd/uhh/: cli.go  config.go  main.go
cmd/uhh2/: cli.go  config.go  main.go
config/: config.go
internal/add/: add.go
internal/config/: config.go
internal/constants/: constants.go
internal/delete/: delete.go
internal/find/: find.go
internal/types/: types.go
lib/: commands.h  uhh-config.h  uhh-git.h  uhh.h
src/: CMakeLists.txt  main.cpp  uhh.cpp
src/commands/: CMakeLists.txt  commands.cpp  commands.h
src/config/: CMakeLists.txt  config.cpp
src/git/: CMakeLists.txt  uhh-git.cpp
src/setup/: CMakeLists.txt  setup.cpp  setup.h
src/term/: CMakeLists.txt  prompt.cpp  prompt.h  terminal.cpp  terminal.h  ui.cpp
src/uhh/: CMakeLists.txt  uhh.cpp
